# netifd

./: CMakeLists.txt  bond.c  bonding.c  bridge.c  config.c  device.c  device.h  interface-ip.c  interface-ip.h  interface.c  interface.h  proto-shell.c  proto-static.c  proto.c  system-linux.c  system.h  ubus.c  ubus.h  wireless.c
scripts/: netifd-proto.sh  netifd-wireless.sh
